tests/cases/conformance/salsa/plainJSGrammarErrors4.ts
// @outdir: out/
// @target: esnext
// @module: esnext
// @allowJs: true
// @filename: plainJSGrammarErrors4.js
class A {
    #a;
    m() {
        this.#a; // ok
        this.#b; // error
    }
}
